# project-

./: LICENSE  README.md  fix_all.py  fix_hacker_de_teclado.py  fix_predict.py  fix_predict2.py  gerar_exemplo_zorro.py  hacker_de_teclado.py  keystroke_model.pth  keystroke_model_best.pth  plot_audio.py  purp.txt  pyproject.toml  quickstart.py  record_test.py  requirements.txt  setup.py  start.py  test_onset.py
