[project]
name = "hacker_de_teclado"
version = "0.1.0"
description = "Acoustic side channel attack implementation"
authors = [
    {name = "Juelz",email = "juliantx@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "torchaudio (>=2.10.0,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "sounddevice (>=0.5.5,<0.6.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torchvision (>=0.25.0,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
